intTests/test_parse_errors/parser006.log.good
Loading file "parser006.saw"
parser006.saw:3:5-3:15: Error: Syntax error: unexpected `rebindable'
Some legal inputs at this point: '(' name
FAILED
